fix: SonarQube CodeSmell Fix