@@ -30,7 +30,6 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -55,7 +54,7 @@ public class MyPageService {
                     TalkPick talkPick = bookmark.getTalkPick();
                     return TalkPickMyPageResponse.from(talkPick, bookmark);
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(responses, pageable, bookmarks.getTotalElements());
     }
@@ -66,7 +65,7 @@ public class MyPageService {
 
         List<TalkPickMyPageResponse> responses = votes.stream()
                 .map(vote -> TalkPickMyPageResponse.from(vote.getTalkPick(), vote))
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(responses, pageable, votes.getTotalElements());
     }
@@ -77,7 +76,7 @@ public class MyPageService {
 
         List<TalkPickMyPageResponse> responses = comments.stream()
                 .map(comment -> TalkPickMyPageResponse.from(comment.getTalkPick(), comment))
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(responses, pageable, comments.getTotalElements());
     }
@@ -88,7 +87,7 @@ public class MyPageService {
 
         List<TalkPickMyPageResponse> responses = talkPicks.stream()
                 .map(TalkPickMyPageResponse::fromMyTalkPick)
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(responses, pageable, talkPicks.getTotalElements());
     }
@@ -103,7 +102,7 @@ public class MyPageService {
                             .orElseThrow(() -> new BalanceTalkException(ErrorCode.NOT_FOUND_BALANCE_GAME));
                     return GameMyPageResponse.from(game, bookmark);
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(responses, pageable, bookmarks.getTotalElements());
     }
@@ -115,7 +114,7 @@ public class MyPageService {
 
         List<GameMyPageResponse> responses = votes.stream()
                 .map(vote -> GameMyPageResponse.from(vote.getGameOption().getGame(), vote))
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(responses, pageable, votes.getTotalElements());
     }
@@ -126,7 +125,7 @@ public class MyPageService {
 
         List<GameMyPageResponse> responses = gameSets.stream()
                 .map(GameMyPageResponse::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(responses, pageable, gameSets.getTotalElements());
     }
